tests/rosetta/transpiler/FS/15-puzzle-solver.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/15-puzzle-solver.fs(6,5): error FS0010: Unexpected start of structured construct in definition. Expected '=' or other token.

/workspace/mochi/tests/rosetta/transpiler/FS/15-puzzle-solver.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module '15-puzzle-solver' based on the file name '15-puzzle-solver.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.
